examples/test/testpolicy18154.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18154
  namespace: namespace81
spec:
  podSelector:
    matchLabels:
      key22: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value35
          key14: value5
          key48: value37
      podSelector:
        matchLabels:
          key39: value24
